--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -183,18 +183,18 @@
   @apply w-full h-[48px] pl-12 p-4 bg-light-white rounded-r-full max-sm:rounded-full outline-none cursor-pointer text-sm;
 }
 
-.search-manufacturer {
+.searchbyname {
   @apply flex-1 max-sm:w-full flex justify-start items-center;
 }
 
-.search-manufacturer__input {
+.searchbyname__input {
   @apply w-full h-[48px] pl-12 p-4 rounded-l-full max-sm:rounded-full bg-light-white outline-none cursor-pointer text-sm;
 }
 
-.search-manufacturer__options {
+.searchbyname__options {
   @apply absolute mt-1 max-h-60 w-full overflow-auto rounded-md bg-white py-1 text-base shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none sm:text-sm;
 }
 
-.search-manufacturer__option {
+.searchbyname__option {
   @apply cursor-default select-none py-2 pl-10 pr-4;
 }
